--- a/ansible/files/web/index.html
+++ b/ansible/files/web/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Interfaces Web du Projet Inpack</title>
+  <title>Interfaces Web du Projet Devops6080</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -51,7 +51,7 @@
   </style>
 </head>
 <body>
-  <h1>Interfaces Web du Projet Inpackt</h1>
+  <h1>Interfaces Web du Projet devops6080</h1>
   <div class="container">
     <!-- VM 192.168.56.71 -->
     <div class="card">
